syntax = "proto3";

package shared.gamedbpb.v1;

option go_package = "wz2100.net/microlobby/shared/proto/gamedbpb/v1;gamedbpb";

import "google/protobuf/empty.proto";

service GameDBV1Service {
    rpc List(ListRequest) returns (ListResponse);
    rpc Create(Game) returns (Game);
    rpc Update(Game) returns (Game);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

service GameDBV1PreService {
    rpc Create(Game) returns (google.protobuf.Empty);
    rpc Update(Game) returns (google.protobuf.Empty);
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
}

message Player {
    string uuid = 1;
    string name = 2;
    string ipAddress = 3;
    bool isHost = 4;
}

message Game {
    string id = 1; // UUID in DB
    string description = 2;
    string map = 3;
    repeated string mods = 4;
    string hostIp = 5;
    uint32 port = 6;
    repeated Player players = 7;
    uint32 maxPlayers = 8;
    string version = 9;
    uint32 verMajor = 10;
    uint32 verMinor = 11;
    bool isPure = 12;
    bool isPrivate = 13;

    // Generated
    uint32 v3GameId = 14;

    // Internal
    uint32 lobbyVersion = 15;
}

message ListResponse {
    uint64 count = 1;
    repeated Game games = 2;
}

message ListRequest {
    bool history = 1;
    uint64 offset = 2;
    uint64 limit = 3;
}

message DeleteRequest {
    string id = 1;
}